# dax_ppdb

./: .gitignore  .pre-commit-config.yaml  README.rst  SConstruct  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build.yaml  build_docs.yaml  docker.yaml  docstyle.yaml
bin.src/: ppdb-cli  ppdb-replication
cloud_functions/ingest/: deploy.sh  main.py  requirements.txt  setup-gcf-permissions-gen1.sh
cloud_functions/stage_chunk/: Dockerfile  Makefile  build-container.sh  build-flex-template.sh  deploy-function.sh  deploy.sh  main.py  metadata.json  requirements.txt  stage_chunk_beam_job.py  teardown.sh
doc/: .gitignore  conf.py  documenteer.toml  index.rst
doc/dev/: internals.rst
docker/: Dockerfile.base  Dockerfile.cli  Dockerfile.replication
docker/scripts/: build.sh  download-sdm-schemas.sh  entrypoint-replication.sh
python/lsst/: __init__.py
python/lsst/dax/ppdb/: __init__.py  _arrow.py  _factory.py  config.py  ppdb.py  ppdb_config.py  replicator.py
python/lsst/dax/ppdb/bigquery/: __init__.py  _chunk_exporter.py  _chunk_uploader.py  _config.py  _manifest.py  _ppdb_bigquery.py  _replica_chunk.py  chunk_promoter.py  chunk_uploader.py  manifest.py  ppdb_bigquery.py  ppdb_bigquery_config.py  ppdb_replica_chunk_extended.py  query_runner.py  replica_chunk.py  sql_resource.py  table_refs.py  update_event.py
python/lsst/dax/ppdb/bigquery/schema/: __init__.py  dataset_builder.py  felis_converter.py
python/lsst/dax/ppdb/bigquery/updates/: __init__.py  expanded_update_record.py  expanded_updates_table.py  update_record_expander.py  update_records.py  updates_manager.py  updates_merger.py  updates_table.py
python/lsst/dax/ppdb/cli/: cli.py  options.py  ppdb_cli.py  ppdb_replication.py  replication.py
python/lsst/dax/ppdb/export/: __init__.py  _arrow.py  _chunk_exporter.py  _chunk_uploader.py  _config.py  _manifest.py  _replica_chunk.py
python/lsst/dax/ppdb/gcp/: _auth.py  _pubsub.py
python/lsst/dax/ppdb/resources/config/sql/: fill_diaobject_validity_end.sql  merge_diaforcedsource_updates.sql  merge_diaobject_updates.sql  merge_diasource_updates.sql  select_promotable_chunks.sql
python/lsst/dax/ppdb/scripts/: __init__.py  create_bigquery.py  create_bigquery_replica_chunk_sql.py  create_datasets.py  create_sql.py  export_chunks_run.py  replication_list_chunks_apdb.py  replication_list_chunks_ppdb.py  replication_list_ids_apdb.py  replication_list_ids_ppdb.py  replication_run.py  upload_chunks_run.py
python/lsst/dax/ppdb/sql/: __init__.py  _base.py  _chunk_exporter.py  _ppdb_replica_chunk_sql.py  _ppdb_sql.py  _ppdb_sql_base.py  bulk_insert.py  config.py  pg_dump.py  ppdb_sql_config.py  ppdb_sql_utils.py
python/lsst/dax/ppdb/tests/: __init__.py  _bigquery.py  _ppdb.py  _updates.py
tests/: test_chunk_promoter.py  test_chunk_uploader.py  test_cli.py  test_dataset_builder.py  test_expanded_update_record.py  test_expanded_updates_table.py  test_felis_converter.py  test_manifest.py  test_ppdbBigQuery.py  test_ppdbSql.py  test_ppdb_bigquery.py  test_ppdb_sql.py  test_update_record_expander.py  test_update_records.py  test_updates_manager.py  test_updates_merger.py  test_updates_table.py
tests/config/: schema.yaml
ups/: dax_ppdb.table
